Add new files and configurations for Svelte project

--- a/website/app/[locale]/(root)/docs/create/content.mdx
+++ b/website/app/[locale]/(root)/docs/create/content.mdx
@@ -23,15 +23,15 @@ Or create a new Master CSS application by specifying the new project name `my-ap
 {[
     {
         name: 'npm', lang: 'bash',
-        code: 'npm create @master/css@rc __my-app__',
+        code: 'npm create @master/css@rc __project__',
     },
     {
         name: 'pnpm', lang: 'bash',
-        code: 'pnpm create @master/css@rc __my-app__',
+        code: 'pnpm create @master/css@rc __project__',
     },
     {
         name: 'yarn', lang: 'bash',
-        code: 'yarn create @master/css@rc __my-app__',
+        code: 'yarn create @master/css@rc __project__',
     }
 ]}
 </CodeTabs>
@@ -85,7 +85,7 @@ npm create @master/css@rc **--ext ts**
 Create a Master CSS App using [official examples](https://github.com/master-co/css/tree/rc/examples).
 <DocProp defaultValue="'vite'" types={['string']} />
 ```bash name=Terminal
-npm create @master/css@rc __my-app__ **--example react**
+npm create @master/css@rc __project__ **--example react**
 ```
 
 ### `--pm`
