--- a/website/app/[locale]/(root)/docs/installation/svelte/runtime-rendering/content.mdx
+++ b/website/app/[locale]/(root)/docs/installation/svelte/runtime-rendering/content.mdx
@@ -14,17 +14,15 @@ import RuntimeRenderingIntro from '../../../rendering-modes/components/RuntimeRe
     <Step $row>
         <StepL>
             ### <StepNum />Clone the example
-            Copy-paste the following commands to quickly start using the [svelte.rr.rc.css.master.co](https://svelte.rr.rc.css.master.co).
+            Copy-paste the commands to quickly start using the https://svelte.rr.rc.css.master.co example.
 
             You can skip all [installation](#installation) steps.
         </StepL>
         <StepR>
             ```bash name=Terminal
-            npx degit master-co/css/examples/svelte-with-runtime-rendering __my-project__
-            cd __my-project__
-            npm install @master/css.svelte@rc
-            npm install
-            npm run dev -- --open
+            npm create @master/css@rc __project__ --example svelte-with-runtime-rendering
+            cd __project__
+            npm run dev
             ```
         </StepR>
         <StepEnd/>
@@ -34,7 +32,6 @@ import RuntimeRenderingIntro from '../../../rendering-modes/components/RuntimeRe
 ---
 
 ## Installation
-
 <StepSection>
     <Step $row>
         <StepL>
@@ -51,23 +48,23 @@ import RuntimeRenderingIntro from '../../../rendering-modes/components/RuntimeRe
     </Step>
     <Step $row>
         <StepL>
-            ### <StepNum />Install Master CSS
-            Install Master CSS Svelte into your project via package managers.
-        </StepL>
-        <StepR>
-            ```install
-            **@master/css.svelte@rc**
-            ```
-        </StepR>
-    </Step>
-    <Step $row>
-        <StepL>
             ### <StepNum />Initialize configuration file
             Run `npm create @master/css@rc` to create a configuration file [master.css.ts](/docs/configuration).
         </StepL>
         <StepR>
             ```bash name=Terminal
             npm create @master/css@rc
+            ```
+        </StepR>
+    </Step>
+    <Step $row>
+        <StepL>
+            ### <StepNum />Install Master CSS
+            Install Master CSS Svelte into your project via package managers.
+        </StepL>
+        <StepR>
+            ```install
+            **@master/css.svelte@rc**
             ```
         </StepR>
     </Step>
