--- a/website/app/[locale]/(root)/docs/installation/svelte/static-extraction/content.mdx
+++ b/website/app/[locale]/(root)/docs/installation/svelte/static-extraction/content.mdx
@@ -14,17 +14,15 @@ import StaticExtractionIntro from '../../../rendering-modes/components/StaticExt
     <Step $row>
         <StepL>
             ### <StepNum />Clone the example
-            Copy-paste the following commands to quickly start using the [svelte.se.rc.css.master.co](https://svelte.se.rc.css.master.co).
+            Copy-paste the commands to quickly start using the https://svelte.se.rc.css.master.co example.
 
             You can skip all [installation](#installation) steps.
         </StepL>
         <StepR>
             ```bash name=Terminal
-            npx degit master-co/css/examples/svelte-with-static-extraction __my-project__
-            cd __my-project__
-            npm install @master/css-extractor.vite@rc
-            npm install
-            npm run dev -- --open
+            npm create @master/css@rc __project__ --example svelte-with-static-extraction
+            cd __project__
+            npm run dev
             ```
         </StepR>
         <StepEnd/>
@@ -51,23 +49,23 @@ import StaticExtractionIntro from '../../../rendering-modes/components/StaticExt
     </Step>
     <Step $row>
         <StepL>
-            ### <StepNum />Install Master CSS
-            Install the Master CSS extractor into your project via package managers.
-        </StepL>
-        <StepR>
-            ```install
-            **@master/css-extractor.vite@rc**
-            ```
-        </StepR>
-    </Step>
-    <Step $row>
-        <StepL>
             ### <StepNum />Initialize configuration file
             Run `npm create @master/css@rc` to create a configuration file [master.css.ts](/docs/configuration).
         </StepL>
         <StepR>
             ```bash name=Terminal
             npm create @master/css@rc
+            ```
+        </StepR>
+    </Step>
+    <Step $row>
+        <StepL>
+            ### <StepNum />Install Master CSS
+            Install the Master CSS extractor into your project via package managers.
+        </StepL>
+        <StepR>
+            ```install
+            **@master/css-extractor.vite@rc**
             ```
         </StepR>
     </Step>
