Add npm install command to Svelte installation instructions

--- a/website/app/[locale]/(root)/docs/installation/svelte/content.mdx
+++ b/website/app/[locale]/(root)/docs/installation/svelte/content.mdx
@@ -22,6 +22,7 @@ import ProgressiveRenderingIntro from '../../rendering-modes/components/Progress
             ```bash name=Terminal
             npm create @master/css@rc __project__ --example svelte
             cd __project__
+            npm install
             npm run dev
             ```
         </StepR>
