--- a/website/app/[locale]/(root)/docs/installation/svelte/runtime-rendering/content.mdx
+++ b/website/app/[locale]/(root)/docs/installation/svelte/runtime-rendering/content.mdx
@@ -22,6 +22,7 @@ import RuntimeRenderingIntro from '../../../rendering-modes/components/RuntimeRe
             ```bash name=Terminal
             npm create @master/css@rc __project__ --example svelte-with-runtime-rendering
             cd __project__
+            npm install
             npm run dev
             ```
         </StepR>
