Update installation guide and layout

--- a/website/app/[locale]/(root)/docs/installation/(tabs)/content.mdx
+++ b/website/app/[locale]/(root)/docs/installation/(tabs)/content.mdx
@@ -19,8 +19,11 @@ Installation guides for popular frameworks and build tools integrated with [rend
 
 ---
 
-Don't have a preferred framework yet? Get started Master CSS with a simple HTML example using [live playground](/play), [CDN](/docs/installation/cdn), or [Vite](/docs/installation/vite).
+Don't have a preferred framework or tool yet? Try the [online playground](/play) or copy and paste [CDN](/docs/installation/cdn) to quickly start using Master CSS.
 
-{/* ## Website builders */}
-
-{/* ## Online editors */}
+(i) Quickly create a blank Master CSS project locally with hot updates using the official CLI.
+```bash name=Terminal
+npm create @master/css@rc __my-app__
+cd __my-app__
+npm run dev --open
+```
