Update project name in create command

--- a/website/app/[locale]/(root)/docs/create/content.mdx
+++ b/website/app/[locale]/(root)/docs/create/content.mdx
@@ -18,7 +18,7 @@ Initialize Master CSS in an existing project:
     }
 ]}
 </CodeTabs>
-Or create a new Master CSS application by specifying the new project name `my-app` and using the [example](#--example):
+Or create a new Master CSS application by specifying the new `project` name and using the [example](#--example):
 <CodeTabs showControls>
 {[
     {
