--- a/website/app/[locale]/(root)/docs/installation/(tabs)/content.mdx
+++ b/website/app/[locale]/(root)/docs/installation/(tabs)/content.mdx
@@ -23,7 +23,7 @@ Don't have a preferred framework or tool yet? Try the [online playground](/play)
 
 (i) Quickly create a blank Master CSS project locally with hot updates using the official CLI.
 ```bash name=Terminal
-npm create @master/css@rc __my-app__
-cd __my-app__
+npm create @master/css@rc __project__
+cd __project__
 npm run dev --open
 ```
