--- a/website/app/[locale]/(root)/docs/installation/astro/static-extraction/content.mdx
+++ b/website/app/[locale]/(root)/docs/installation/astro/static-extraction/content.mdx
@@ -13,15 +13,14 @@ import StaticExtractionIntro from '../../../rendering-modes/components/StaticExt
     <Step $row>
         <StepL>
             ### <StepNum />Clone the example
-            Copy-paste the following commands to quickly start using the [astro.se.rc.css.master.co](https://astro.se.rc.css.master.co).
+            Copy-paste the commands to quickly start using the https://astro.se.rc.css.master.co example.
 
             You can skip all [installation](#installation) steps.
         </StepL>
         <StepR>
             ```bash name=Terminal
-            npx degit master-co/css/examples/astro-with-static-extraction __my-project__
-            cd __my-project__
-            npm install @master/css-extractor.vite@rc
+            npm create @master/css@rc __project__ --example astro-with-static-extraction
+            cd __project__
             npm install
             npm run dev
             ```
@@ -49,23 +48,23 @@ import StaticExtractionIntro from '../../../rendering-modes/components/StaticExt
     </Step>
     <Step $row>
         <StepL>
-            ### <StepNum />Install Master CSS
-            Install the Master CSS extractor into your project via package managers.
-        </StepL>
-        <StepR>
-            ```install
-            **@master/css-extractor.vite@rc**
-            ```
-        </StepR>
-    </Step>
-    <Step $row>
-        <StepL>
             ### <StepNum />Initialize configuration file
             Run `npm create @master/css@rc` to create a configuration file [master.css.ts](/docs/configuration).
         </StepL>
         <StepR>
             ```bash name=Terminal
             npm create @master/css@rc
+            ```
+        </StepR>
+    </Step>
+    <Step $row>
+        <StepL>
+            ### <StepNum />Install Master CSS
+            Install the Master CSS extractor into your project via package managers.
+        </StepL>
+        <StepR>
+            ```install
+            **@master/css-extractor.vite@rc**
             ```
         </StepR>
     </Step>
