--- a/website/app/[locale]/(root)/docs/installation/laravel/content.mdx
+++ b/website/app/[locale]/(root)/docs/installation/laravel/content.mdx
@@ -19,9 +19,8 @@ import RuntimeRenderingIntro from '../../rendering-modes/components/RuntimeRende
         </StepL>
         <StepR>
             ```bash name=Terminal
-            npx degit master-co/css/examples/laravel-with-runtime-rendering __my-project__
-            cd __my-project__
-            npm install @master/css-runtime@rc
+            npm create @master/css@rc __project__ --example laravel-with-runtime-rendering
+            cd __project__
             npm install
             ```
         </StepR>
@@ -69,23 +68,23 @@ import RuntimeRenderingIntro from '../../rendering-modes/components/RuntimeRende
     </Step>
     <Step $row>
         <StepL>
-            ### <StepNum />Install Master CSS
-            Install Master CSS into your project via package managers.
-        </StepL>
-        <StepR>
-            ```install
-            **@master/css-runtime@rc**
-            ```
-        </StepR>
-    </Step>
-    <Step $row>
-        <StepL>
             ### <StepNum />Initialize configuration file
             Run `npm create @master/css@rc` to create a configuration file [master.css.js](/docs/configuration).
         </StepL>
         <StepR>
             ```bash name=Terminal
             npm create @master/css@rc
+            ```
+        </StepR>
+    </Step>
+    <Step $row>
+        <StepL>
+            ### <StepNum />Install Master CSS
+            Install Master CSS into your project via package managers.
+        </StepL>
+        <StepR>
+            ```install
+            **@master/css-runtime@rc**
             ```
         </StepR>
     </Step>
