--- a/website/app/[locale]/(root)/docs/installation/react/content.mdx
+++ b/website/app/[locale]/(root)/docs/installation/react/content.mdx
@@ -1,7 +1,7 @@
-import ProgressiveRenderingIntro from '../../rendering-modes/components/ProgressiveRenderingIntro.mdx'
+import RuntimeRenderingIntro from '../../rendering-modes/components/RuntimeRenderingIntro.mdx'
 
-<ProgressiveRenderingIntro img={{
-    href: "https://react.pr.rc.css.master.co",
+<RuntimeRenderingIntro img={{
+    href: "https://react.rr.rc.css.master.co",
     ...require('~/public/images/react-dev.png').default,
     dark: require('~/public/images/react-dev@dark.png').default,
     alt: 'Vite and Master CSS',
@@ -9,21 +9,23 @@ import ProgressiveRenderingIntro from '../../rendering-modes/components/Progress
 
 ---
 
-## Quick start
-This is a simple Vite example of React server-side rendering.
-
 A full-stack framework, such as [Next.js](/docs/installation/nextjs), [Remix](/docs/installation/remix), etc., is recommended for better application performance and experience.
+
+---
+
+## Quick start
 <StepSection>
     <Step $row>
         <StepL>
             ### <StepNum />Clone the example
-            Copy-paste the following commands to quickly start using the [react.pr.rc.css.master.co](https://react.pr.rc.css.master.co).
+            Copy-paste the commands to quickly start using the https://react.rr.rc.css.master.co example.
+
+            You can skip all [installation](#installation) steps.
         </StepL>
         <StepR>
             ```bash name=Terminal
-            npx degit master-co/css/examples/react-with-progressive-rendering __my-project__
-            cd __my-project__
-            npm install @master/css.react@rc
+            npm create @master/css@rc __project__ --example react
+            cd __project__
             npm install
             npm run dev
             ```
@@ -34,4 +36,103 @@ A full-stack framework, such as [Next.js](/docs/installation/nextjs), [Remix](/d
 
 ---
 
-Are you building a React single-page application (SPA)? Use the handy [Master CSS Runtime Rendering in React](/docs/installation/react/runtime-rendering).
+## Installation
+<StepSection>
+    <Step $row>
+        <StepL>
+            ### <StepNum />Create a project
+            If you don't have a React project, create one first. It's recommended to refer to [Start a New React Project](https://react.dev/learn/start-a-new-react-project).
+        </StepL>
+        <StepR>
+            ```bash name=Terminal
+            npm create vite@latest __project__ -- --template react-ts
+            cd __project__
+            ```
+        </StepR>
+    </Step>
+    <Step $row>
+        <StepL>
+            ### <StepNum />Initialize configuration file
+            Run `npm create @master/css@rc` to create a configuration file [master.css.ts](/docs/configuration).
+        </StepL>
+        <StepR>
+            ```bash name=Terminal
+            npm create @master/css@rc
+            ```
+        </StepR>
+    </Step>
+    <Step $row>
+        <StepL>
+            ### <StepNum />Install Master CSS
+            Install Master CSS into your project via package managers.
+        </StepL>
+        <StepR>
+            ```install
+            **@master/css.react@rc**
+            ```
+        </StepR>
+    </Step>
+    <Step $row>
+        <StepL>
+            ### <StepNum />Set up CSS runtime engine
+            - Import your custom configuration `master.css.ts`
+            - Initialize the runtime engine using `CSSRuntimeProvider`
+            - Add `css display: none` in `html <html>` to avoid [FOUC](https://en.wikipedia.org/wiki/Flash_of_unstyled_content)
+        </StepL>
+        <StepR>
+            ```ts name=src/main.tsx
+            import React from 'react'
+            import ReactDOM from 'react-dom/client'
+            import App from './App'
+            import './index.css'
+            +import { CSSRuntimeProvider } from '@master/css.react'
+            +import config from '../master.css'
+
+            ReactDOM.createRoot(document.getElementById('root') as HTMLElement).render(
+                <React.StrictMode>
+            +        <CSSRuntimeProvider config={config}>
+                        <App />
+            +        </CSSRuntimeProvider>
+                </React.StrictMode>,
+            )
+            ```
+        </StepR>
+    </Step>
+    <Step $row>
+        <StepL>
+            ### <StepNum />Prevent flash of unstyled content
+            Add `css display: 'none'` in `html <html>` to avoid [FOUC](https://en.wikipedia.org/wiki/Flash_of_unstyled_content) caused by the runtime engine not yet injecting CSS rules.
+        </StepL>
+        <StepR>
+            ```html name=index.html
+                <!DOCTYPE html>
+                <html lang="en" style="**display: none**">
+                …
+            ```
+        </StepR>
+    </Step>
+    <Step $row>
+        <StepL>
+            ### <StepNum />Launch server
+            Run the Vite development server.
+        </StepL>
+        <StepR>
+            ```bash name=Terminal
+            npm run dev -- --open
+            ```
+        </StepR>
+    </Step>
+    <Step>
+        ### <StepNum />Hello world!
+        Now style your first element using Master CSS syntax!
+        ```tsx name=src/App.tsx
+        export default function App() {
+            return (
+                <h1 className="**font:40** **font:heavy** **italic** **m:12x** **text:center**">Hello World</h1>
+            )
+        }
+        ```
+        <p className="mt:12x">Open your browser to watch the changes.</p>
+        <HelloWorld url="localhost:5173" />
+    </Step>
+</StepSection>
