--- a/website/app/[locale]/(root)/docs/installation/vite/content.mdx
+++ b/website/app/[locale]/(root)/docs/installation/vite/content.mdx
@@ -14,15 +14,14 @@ import RuntimeRenderingIntro from '../../rendering-modes/components/RuntimeRende
     <Step $row>
         <StepL>
             ### <StepNum />Clone the example
-            Copy-paste the following commands to quickly start using the [vite.rr.rc.css.master.co](https://vite.rr.rc.css.master.co).
+            Copy-paste the commands to quickly start using the https://vite.rr.rc.css.master.co example.
 
             You can skip all [installation](#installation) steps.
         </StepL>
         <StepR>
             ```bash name=Terminal
-            npx degit master-co/css/examples/vite __my-project__
-            cd __my-project__
-            npm install @master/css-runtime@rc
+            npm create @master/css@rc __project__ --example vite
+            cd __project__
             npm install
             npm run dev
             ```
@@ -59,23 +58,23 @@ import RuntimeRenderingIntro from '../../rendering-modes/components/RuntimeRende
     </Step>
     <Step $row>
         <StepL>
-            ### <StepNum />Install Master CSS
-            Install Master CSS into your project via package managers.
-        </StepL>
-        <StepR>
-            ```install
-            **@master/css-runtime@rc**
-            ```
-        </StepR>
-    </Step>
-    <Step $row>
-        <StepL>
             ### <StepNum />Initialize configuration file
             Run `npm create @master/css@rc` to create a configuration file [master.css.ts](/docs/configuration).
         </StepL>
         <StepR>
             ```bash name=Terminal
             npm create @master/css@rc
+            ```
+        </StepR>
+    </Step>
+    <Step $row>
+        <StepL>
+            ### <StepNum />Install Master CSS
+            Install Master CSS into your project via package managers.
+        </StepL>
+        <StepR>
+            ```install
+            **@master/css-runtime@rc**
             ```
         </StepR>
     </Step>
