--- a/website/app/[locale]/(root)/docs/installation/vite/static-extraction/content.mdx
+++ b/website/app/[locale]/(root)/docs/installation/vite/static-extraction/content.mdx
@@ -14,15 +14,14 @@ import StaticExtractionIntro from '../../../rendering-modes/components/StaticExt
     <Step $row>
         <StepL>
             ### <StepNum />Clone the example
-            Copy-paste the following commands to quickly start using the [vite.se.rc.css.master.co](https://vite.se.rc.css.master.co).
+            Copy-paste the commands to quickly start using the https://vite.se.rc.css.master.co example.
 
             You can skip all [installation](#installation) steps.
         </StepL>
         <StepR>
             ```bash name=Terminal
-            npx degit master-co/css/examples/vite-with-static-extraction __my-project__
-            cd __my-project__
-            npm install @master/css-extractor.vite@rc
+            npm create @master/css@rc __project__ --example vite-with-static-extraction
+            cd __project__
             npm install
             npm run dev
             ```
