--- a/website/app/[locale]/(root)/docs/installation/webpack/static-extraction/content.mdx
+++ b/website/app/[locale]/(root)/docs/installation/webpack/static-extraction/content.mdx
@@ -14,15 +14,14 @@ import StaticExtractionIntro from '../../../rendering-modes/components/StaticExt
     <Step $row>
         <StepL>
             ### <StepNum />Clone the example
-            Copy-paste the following commands to quickly start using the [webpack.se.rc.css.master.co](https://webpack.se.rc.css.master.co).
+            Copy-paste the commands to quickly start using the https://webpack.se.rc.css.master.co example.
 
             You can skip all [installation](#installation) steps.
         </StepL>
         <StepR>
             ```bash name=Terminal
-            npx degit master-co/css/examples/webpack-with-static-extraction __my-project__
-            cd __my-project__
-            npm install @master/css-runtime@rc
+            npm create @master/css@rc __project__ --example webpack-with-static-extraction
+            cd __project__
             npm install
             npm run dev
             ```
@@ -52,23 +51,23 @@ import StaticExtractionIntro from '../../../rendering-modes/components/StaticExt
     </Step>
     <Step $row>
         <StepL>
-            ### <StepNum />Install Master CSS Extractor
-            Install the Master CSS extractor into your project via package managers.
-        </StepL>
-        <StepR>
-            ```install
-            **@master/css-extractor.webpack@rc**
-            ```
-        </StepR>
-    </Step>
-    <Step $row>
-        <StepL>
             ### <StepNum />Initialize configuration file
             Run `npm create @master/css@rc` to create a configuration file [master.css.ts](/docs/configuration).
         </StepL>
         <StepR>
             ```bash name=Terminal
             npm create @master/css@rc
+            ```
+        </StepR>
+    </Step>
+    <Step $row>
+        <StepL>
+            ### <StepNum />Install Master CSS Extractor
+            Install the Master CSS extractor into your project via package managers.
+        </StepL>
+        <StepR>
+            ```install
+            **@master/css-extractor.webpack@rc**
             ```
         </StepR>
     </Step>
