--- a/website/app/[locale]/(root)/docs/installation/(tabs)/content.mdx
+++ b/website/app/[locale]/(root)/docs/installation/(tabs)/content.mdx
@@ -21,9 +21,21 @@ Installation guides for popular frameworks and build tools integrated with [rend
 
 Don't have a preferred framework or tool yet? Try the [online playground](/play) or copy and paste [CDN](/docs/installation/cdn) to quickly start using Master CSS.
 
-(i) Quickly create a blank Master CSS project locally with hot updates using the official CLI.
-```bash name=Terminal
-npm create @master/css@rc __project__
-cd __project__
-npm run dev --open
-```
+---
+
+<StepSection>
+    <Step $row>
+        <StepL>
+            ### <StepNum />Quick start in one step
+            Quickly create a blank Master CSS project locally with hot updates using the official CLI.
+        </StepL>
+        <StepR>
+            ```bash name=Terminal
+            npm create @master/css@rc __project__
+            cd __project__
+            npm run dev --open
+            ```
+        </StepR>
+        <StepEnd/>
+    </Step>
+</StepSection>
