Update installation step title

--- a/website/app/[locale]/(root)/docs/installation/(tabs)/content.mdx
+++ b/website/app/[locale]/(root)/docs/installation/(tabs)/content.mdx
@@ -26,7 +26,7 @@ Don't have a preferred framework or tool yet? Try the [online playground](/play)
 <StepSection>
     <Step $row>
         <StepL>
-            ### <StepNum />Quick start in one step
+            ### <StepNum />Start in one step
             Quickly create a blank Master CSS project locally with hot updates using the official CLI.
         </StepL>
         <StepR>
