Update font styles and links

--- a/website/app/[locale]/(root)/docs/fonts/content.mdx
+++ b/website/app/[locale]/(root)/docs/fonts/content.mdx
@@ -71,8 +71,7 @@ You can also self-host the fonts via native CSS, as usual.
     font-style: normal;
     font-weight: 400;
     font-display: swap;
-    src: url("/fonts/Inter-Regular.woff2") format("woff2"),
-        url("/fonts/Inter-Regular.woff") format("woff");
+    src: url("/fonts/Inter-Regular.woff2") format("woff2");
 }
 ```
 
