Update dependencies in package.json files

--- a/website/app/[locale]/(root)/docs/create/content.mdx
+++ b/website/app/[locale]/(root)/docs/create/content.mdx
@@ -46,7 +46,7 @@ npm create @master/css@rc **--ext esm**
     <summary>View the generated file</summary>
     <div>
         <Code lang="js" name="master.css.mjs">
-            {require('../../../../../../packages/create/src/master.css.mjs')}
+            {require('../../../../../../packages/create/src/master.css.mjs').default}
         </Code>
     </div>
 </details>
@@ -61,7 +61,7 @@ npm create @master/css@rc **--ext cjs**
     <summary>View the generated file</summary>
     <div>
         <Code lang="js" name="master.css.js">
-            {require('../../../../../../packages/create/src/master.css.js.js')}
+            {require('../../../../../../packages/create/src/master.css.js.js').default}
         </Code>
     </div>
 </details>
@@ -76,7 +76,7 @@ npm create @master/css@rc **--ext ts**
     <summary>View the generated file</summary>
     <div>
         <Code lang="js" name="master.css.ts">
-            {require('../../../../../../packages/create/src/master.css.ts.js')}
+            {require('../../../../../../packages/create/src/master.css.ts.js').default}
         </Code>
     </div>
 </details>
