Fix import statements and remove unused code

--- a/website/app/[locale]/(root)/docs/extractor/content.mdx
+++ b/website/app/[locale]/(root)/docs/extractor/content.mdx
@@ -1,7 +1,7 @@
 ## Usage [sr-only]
 
 ```js
-import CSSExtractor from '@master/css-extractor'
+import { CSSExtractor } from '@master/css-extractor'
 ```
 Create an instance of the Master CSS extractor:
 ```js
