Update CSSExtractorPlugin imports

--- a/website/app/[locale]/(root)/docs/installation/astro/static-extraction/content.mdx
+++ b/website/app/[locale]/(root)/docs/installation/astro/static-extraction/content.mdx
@@ -74,7 +74,7 @@ import StaticExtractionIntro from '../../../rendering-modes/components/StaticExt
         </StepL>
         <StepR>
             ```js name=astro.config.mjs
-            + import { CSSExtractorPlugin } from '@master/css-extractor.vite'
+            + import CSSExtractorPlugin from '@master/css-extractor.vite'
 
             export default defineNuxtConfig({
             +    vite: {
