--- a/website/app/[locale]/(root)/docs/installation/blazor/static-extraction/content.mdx
+++ b/website/app/[locale]/(root)/docs/installation/blazor/static-extraction/content.mdx
@@ -58,7 +58,7 @@ import StaticExtractionIntro from '../../../rendering-modes/components/StaticExt
         <StepR>
             ```js name=blazor.config.ts
             +import { defineConfig } from 'blazor'
-            +import { CSSExtractorPlugin } from '@master/css-extractor.blazor'
+            +import CSSExtractorPlugin from '@master/css-extractor.blazor'
 
             +export default defineConfig({
             +    plugins: [
