--- a/website/app/[locale]/(root)/docs/installation/nextjs/static-extraction/content.mdx
+++ b/website/app/[locale]/(root)/docs/installation/nextjs/static-extraction/content.mdx
@@ -94,7 +94,7 @@ import StaticExtractionIntro from '../../../rendering-modes/components/StaticExt
         </StepL>
         <StepR>
             ```js name=next.config.js
-            +const { CSSExtractorPlugin } = require('@master/css-extractor.webpack')
+            +const CSSExtractorPlugin = require('@master/css-extractor.webpack')
 
             +/** @type {import('webpack').Configuration} */
             +const webpackConfig = {
