--- a/website/app/[locale]/(root)/docs/installation/nuxtjs/static-extraction/content.mdx
+++ b/website/app/[locale]/(root)/docs/installation/nuxtjs/static-extraction/content.mdx
@@ -75,7 +75,7 @@ import StaticExtractionIntro from '../../../rendering-modes/components/StaticExt
         </StepL>
         <StepR>
             ```js name=nuxt.config.ts
-            +import { CSSExtractorPlugin } from '@master/css-extractor.vite'
+            +import CSSExtractorPlugin from '@master/css-extractor.vite'
 
             export default defineNuxtConfig({
             +    vite: {
