--- a/website/app/[locale]/(root)/docs/installation/react/static-extraction/content.mdx
+++ b/website/app/[locale]/(root)/docs/installation/react/static-extraction/content.mdx
@@ -77,7 +77,7 @@ import StaticExtractionIntro from '../../../rendering-modes/components/StaticExt
             ```ts name=vite.config.ts
             import { defineConfig } from 'vite'
             import react from '@vitejs/plugin-react'
-            +import { CSSExtractorPlugin } from '@master/css-extractor.vite'
+            +import CSSExtractorPlugin from '@master/css-extractor.vite'
 
             export default defineConfig({
                 plugins: [
