--- a/website/app/[locale]/(root)/docs/installation/webpack/static-extraction/content.mdx
+++ b/website/app/[locale]/(root)/docs/installation/webpack/static-extraction/content.mdx
@@ -79,7 +79,7 @@ import StaticExtractionIntro from '../../../rendering-modes/components/StaticExt
             ```js name=webpack.config.js
             + const path = require('path')
             + const HtmlWebpackPlugin = require('html-webpack-plugin')
-            + const { CSSExtractorPlugin } = require('@master/css-extractor.webpack')
+            + const CSSExtractorPlugin = require('@master/css-extractor.webpack')
 
             + module.exports = {
             +     entry: './src/index.js',
