--- a/website/app/[locale]/(root)/docs/installation/angular/static-extraction/content.mdx
+++ b/website/app/[locale]/(root)/docs/installation/angular/static-extraction/content.mdx
@@ -84,7 +84,7 @@ import StaticExtractionIntro from '../../../rendering-modes/components/StaticExt
         </StepL>
         <StepR>
             ```js name=webpack.config.js
-            +const { CSSExtractorPlugin } = require('@master/css-extractor.webpack')
+            +const CSSExtractorPlugin = require('@master/css-extractor.webpack')
 
             +module.exports = (config) => {
             +    config.plugins.push(
