--- a/website/app/[locale]/(root)/docs/installation/laravel/static-extraction/content.mdx
+++ b/website/app/[locale]/(root)/docs/installation/laravel/static-extraction/content.mdx
@@ -96,7 +96,7 @@ import StaticExtractionIntro from '../../../rendering-modes/components/StaticExt
             ```js name=vite.config.js
             import { defineConfig } from 'vite'
             import laravel from 'laravel-vite-plugin'
-            +import { CSSExtractorPlugin } from '@master/css-extractor.vite'
+            +import CSSExtractorPlugin from '@master/css-extractor.vite'
 
             export default defineConfig({
                 plugins: [
