--- a/website/app/[locale]/(root)/docs/installation/vite/static-extraction/content.mdx
+++ b/website/app/[locale]/(root)/docs/installation/vite/static-extraction/content.mdx
@@ -86,7 +86,7 @@ import StaticExtractionIntro from '../../../rendering-modes/components/StaticExt
         <StepR>
             ```ts name=vite.config.ts
             +import { defineConfig } from 'vite'
-            +import { CSSExtractorPlugin } from '@master/css-extractor.vite'
+            +import CSSExtractorPlugin from '@master/css-extractor.vite'
 
             +export default defineConfig({
             +    plugins: [
